--- a/reactive_service_domain/Cargo.toml
+++ b/reactive_service_domain/Cargo.toml
@@ -12,7 +12,7 @@ path = "src/lib.rs"
 serde = { version = "1", features = ["derive"] }
 serde_derive = "1.0"
 regex = "1.10.3"
-heapless = "0.8.0"
+heapless = { version = "0.8.0", features = ["serde"] }
 thiserror = "1.0.57"
 lazy_static = "1.4.0"
 itertools = "0.12.1"
