--- a/reactive_service_single_thread/Cargo.toml
+++ b/reactive_service_single_thread/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "reactive_service"
+name = "reactive_service_single_thread"
 version = "0.1.0"
 edition = "2021"
 rust-version = "1.77.2"
