--- a/reactive_service_single_thread/Cargo.toml
+++ b/reactive_service_single_thread/Cargo.toml
@@ -4,6 +4,10 @@ version = "0.1.0"
 edition = "2021"
 rust-version = "1.77.2"
 
+[lib]
+name = "reactive_service_single_thread"
+path = "src/lib.rs"
+
 [dependencies]
 reactive_service_domain = { path = "../reactive_service_domain" }
 serde = { version = "*", features = ["derive"] }
